Fix overflow

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,5 +26,15 @@
 
 }
 
+@media screen and (min-width: 481px) and (max-width: 820px) {
+
+  .App {
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+  }
+
+}
+
 
 
